Remove scrollbar styling due to loading issues on phone

--- a/assets/main.css
+++ b/assets/main.css
@@ -225,6 +225,7 @@ p {
   min-width: 20%;
   transition: 0.5s;
   text-align: center;
+  text-transform: uppercase;
   border: none;
   font: inherit;
   background: none;
@@ -326,6 +327,7 @@ p {
   min-width: 20%;
   transition: 0.5s;
   text-align: center;
+  text-transform: uppercase;
 }
 .link-btn:hover {
   cursor: pointer;
@@ -426,13 +428,7 @@ p {
   align-items: stretch;
   height: 8rem;
   overflow-x: scroll;
-  scrollbar-width: none;
-  -ms-overflow-style: none;
   margin-top: 1rem;
-}
-.slideshow__thumbnails::-webkit-scrollbar {
-  width: 100%;
-  height: 100%;
 }
 @media screen and (min-width: 768px) {
   .slideshow__thumbnails {
