--- a/assets/styles/_mixins.sass
+++ b/assets/styles/_mixins.sass
@@ -82,6 +82,7 @@ $large: 1440px
     min-width: 20%
     transition: .5s
     text-align: center
+    text-transform: uppercase
     &:hover
         cursor: pointer
 
