--- a/assets/styles/blocks/_slideshow.sass
+++ b/assets/styles/blocks/_slideshow.sass
@@ -18,13 +18,7 @@
         @include mixins.flex(row nowrap, space-between, stretch)
         height: 8rem
         overflow-x: scroll
-        scrollbar-width: none
-        -ms-overflow-style: none
         margin-top: 1rem
-
-        &::-webkit-scrollbar
-            width: 100%
-            height: 100%
 
         @include mixins.medium
             height: 6rem
